# RecipeScaler

./: .gitignore  LICENSE.md  Main.hs  README.md  Recipe.hs  RecipeJSON.hs  RecipeScaler.cabal  RecipeScaler.hs  cabal.sandbox.config  example_recipe.txt  recipeScaler.cabal
Backend/: Recipe.hs
static/: recipes.js  style.css
templates/: Home.hs
